--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -59,255 +59,92 @@
                     </div>
                 </section>
 
-                <section class="adjust-section-width product-presentation">
-                    <button class="scroll-back" type="button"><</button>
+                <section class="section-space product-presentation">
 
-                    <div class="product-content">
-                        <div class="new-tag"></div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
+                    <div class="products-header">
+                        <div class="title" title="Title">
+                            Title
                         </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <div class="dashed-price">R$ 89,90</div>
-                                <div class="actual-price">R$ 49,90</div>
-                                <div class="percentage-off">38% Off</div>
-                            </div>
+                        <div class="description" title="Description">
+                            Description
                         </div>
                     </div>
 
-                    <div class="product-content">
-                        <div class="new-tag"></div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
+                    <div class="slider">
+                        <div class="products-content slider-draggable">
+                            <div class="product-content">
+                                <div class="new-tag"></div>
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <div class="dashed-price">R$ 89,90</div>
+                                        <div class="actual-price">R$ 49,90</div>
+                                        <div class="percentage-off">38% Off</div>
+                                    </div>
+                                </div>
                             </div>
+
+                            <div class="product-content">
+                                <div class="new-tag"></div>
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="product-content">
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="product-content">
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
-
-                    <div class="product-content">
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 89,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <button class="scroll-next" type="button">></button>
                 </section>
 
-                <section class="adjust-section-width">
+                <section class="section-space">
                     <div class="accordion accordion-tp-1">
                         <div class="accordion-title">
                             <h3>Teste</h3>
@@ -357,9 +194,10 @@
         </footer>
 
     </body>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <script src="../public/accordion/js/accordion.js"></script>
-    <script src="../public/js/base.js"></script>
+    <script type="text/javascript" src="../public/accordion/js/accordion.js"></script>
+    <script type="text/javascript" src="../public/js/base.js"></script>
 </html>
