FE - Inclusão de tituto, descição e link no banner

--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -43,15 +43,26 @@
                     </div>
 
                     <div class="banner-image image-full-content">
-                        <img src="../public/images/480x480.png" alt="">
+                        <div class="banner-content">
+                            <div class="title">
+                                Lorem Ipsum
+                            </div>
+                            <div class="description">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                            </div>
+                            <div class="link">
+                                <a href="#">
+                                    Conferir
+                                </a>
+                            </div>
+                        </div>
+                        <img src="../public/images/1375x520.png" alt="">
                     </div>
 
                     <div class="banner-image image-full-content">
-                        <img src="../public/images/1375x520.png" alt="">
-                    </div>
-
-                    <div class="banner-image image-available-content">
-                        <img src="../public/images/1375x520.png" alt="">
+                        <a href="#">
+                            <img src="../public/images/480x480.png" alt="">
+                        </a>
                     </div>
 
                     <div class="next-image">
@@ -93,6 +104,70 @@
 
                             <div class="product-content">
                                 <div class="new-tag"></div>
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="product-content">
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="product-content">
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="product-content">
+                                <div class="product-image">
+                                    <a href="#">
+                                        <img src="../public/images/480x480.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="product-details">
+                                    <a href="#" class="name">
+                                        Product
+                                    </a>
+                                    <div class="price">
+                                        <p class="actual-price">R$ 119,90</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="product-content">
                                 <div class="product-image">
                                     <a href="#">
                                         <img src="../public/images/480x480.png" alt="">
