--- a/layout_2/public/css/base.css
+++ b/layout_2/public/css/base.css
@@ -76,6 +76,10 @@ content{
     transform: translateX(0);
 }
 
+/*
+    Banner Section
+*/
+
 .banner{
     width: 100%;
     height: 450px;
@@ -135,8 +139,9 @@ content{
     -ms-user-select: none;
 }
 
-.banner-tp-1 .banner-image img[class~="active"]{
+.banner-tp-1 .banner-image.active img{
     display: block;
+    position: relative;
     opacity: 1;
 }
 
@@ -161,6 +166,65 @@ content{
     opacity: 0;
     transition: 0.5s all;
 }
+
+.banner.banner-tp-1 .banner-image .banner-content{
+    display: none;
+    opacity: 0;
+    z-index: 1;
+    margin: 0 auto;
+    position: absolute;
+    width: 80%;
+    height: 100%;
+    left: 9%;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 30px;
+    transition: 0.5s all;
+}
+
+.banner.banner-tp-1 .banner-image.active .banner-content{
+    opacity: 1;
+    display: flex;
+}
+
+.banner.banner-tp-1 .banner-image .banner-content .title{
+    font-size: 50px;
+    margin: 10px 0;
+}
+
+.banner.banner-tp-1 .banner-image .banner-content .description{
+    font-size: 20px;
+    margin: 10px 0;
+}
+
+.banner.banner-tp-1 .banner-image .banner-content .link {
+    margin: 12px 0;
+}
+
+.banner.banner-tp-1 .banner-image .banner-content .link a{
+    font-size: 20px;
+    outline: none;
+    padding: 10px 30px;
+    border: none;
+    box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
+    background-color: #ffab00;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: 0.5s all;
+}
+
+.banner.banner-tp-1 .banner-image .banner-content .link a:hover{
+    box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.2);
+    background-color: #ea9f00;
+    color: #fff;
+}
+
+/*
+    End Banner
+*/
+
+/*Product Presentation*/
 
 .product-presentation{
     user-select: none;
@@ -285,10 +349,12 @@ content{
     background-color: #ff0000;
     border-radius: 10px;
     display: inline;
-    padding: 5px 10px 5px 10px;
-    margin-left: 5px;
+    padding: 5px 7px 5px 7px;
+    margin-left: 3px;
     color: #ffffff;
 }
+
+/*Footer*/
 
 footer{
     box-shadow: #c7c7c7 0 0 10px 0;
