--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -1,23 +1,21 @@
 <!doctype html>
-<html lang="pt-Br">
+<html lang="pt-br">
 
     <head>
+        <title>Front-End</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="../public/css/base.css">
         <link rel="stylesheet" href="../public/accordion/css/accordion.css">
-
-        <title>Front-End</title>
+        <link rel="stylesheet" href="../public/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../public/css/base.css">
     </head>
 
     <body>
-
         <header>
             <div class="main-nav">
                 <div class="nav">
@@ -28,23 +26,20 @@
                         Search
                     </section>
                     <section class="user-info">
-                        <div class="wishlist">
-                            <a href="#" class="wishlist" title="Wishlist">
-                                <ion-icon name="heart"></ion-icon>
-                            </a>
-                        </div>
-                        <div class="user">
-                            <a href="#" class="user" title="User">
-                                <ion-icon name="person"></ion-icon>
-                            </a>
-                        </div>
-                        <div class="cart">
-                            <a href="#" class="cart" data-target=".cart-view" title="Cart">
-                                <ion-icon name="cart"></ion-icon>
-                            </a>
+                        <a href="#" class="wishlist" title="Wishlist">
+                            <i class="fa fa-heart-o"></i>
+                        </a>
+
+                        <a href="#" class="user" title="User">
+                            <i class="fa fa-user-o"></i>
+                        </a>
+
+                        <div class="cart" title="Cart">
+                            <i class="fa fa-shopping-basket"></i>
+
                             <div class="cart-view" data-state="">
                                 <div class="cart-clear">
-                                    <ion-icon name="cart" class="cart"></ion-icon>
+                                    <i class="fa fa-shopping-cart fa-2x"></i>
                                     <small>
                                         Carrinho vazio, adicione um produto no carrinho para conseguir prosseguir para a compra.
                                     </small>
@@ -126,11 +121,11 @@
                                     </a>
                                 </div>
                                 <div class="product-buttons">
-                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
-                                        <ion-icon name="heart-outline"></ion-icon>
-                                    </a>
                                     <a href="javascript:void(0)" class="cart" title="Cart">
-                                        <ion-icon name="cart-outline"></ion-icon>
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </a>
+                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
+                                        <i class="fa fa-heart-o"></i>
                                     </a>
                                 </div>
                                 <div class="product-details">
@@ -138,11 +133,11 @@
                                         Product
                                     </a>
                                     <div class="product-rating">
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
                                     </div>
                                     <div class="price">
                                         <div class="dashed-price">R$ 89,90</div>
@@ -159,11 +154,11 @@
                                     </a>
                                 </div>
                                 <div class="product-buttons">
-                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
-                                        <ion-icon name="heart-outline"></ion-icon>
-                                    </a>
                                     <a href="javascript:void(0)" class="cart" title="Cart">
-                                        <ion-icon name="cart-outline"></ion-icon>
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </a>
+                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
+                                        <i class="fa fa-heart-o"></i>
                                     </a>
                                 </div>
                                 <div class="product-details">
@@ -171,11 +166,11 @@
                                         Product
                                     </a>
                                     <div class="product-rating">
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star-half" class="text-warning"></ion-icon>
-                                        <ion-icon name="star-outline" class="text-warning"></ion-icon>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star-half-o text-warning"></i>
+                                        <i class="fa fa-star-o text-warning"></i>
                                     </div>
                                     <div class="price">
                                         <div class="actual-price">R$ 169,49</div>
@@ -190,11 +185,11 @@
                                     </a>
                                 </div>
                                 <div class="product-buttons">
-                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
-                                        <ion-icon name="heart-outline"></ion-icon>
-                                    </a>
                                     <a href="javascript:void(0)" class="cart" title="Cart">
-                                        <ion-icon name="cart-outline"></ion-icon>
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </a>
+                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
+                                        <i class="fa fa-heart-o"></i>
                                     </a>
                                 </div>
                                 <div class="product-details">
@@ -217,11 +212,11 @@
                                     </a>
                                 </div>
                                 <div class="product-buttons">
-                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
-                                        <ion-icon name="heart-outline"></ion-icon>
-                                    </a>
                                     <a href="javascript:void(0)" class="cart" title="Cart">
-                                        <ion-icon name="cart-outline"></ion-icon>
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </a>
+                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
+                                        <i class="fa fa-heart-o"></i>
                                     </a>
                                 </div>
                                 <div class="product-details">
@@ -229,11 +224,11 @@
                                         Product
                                     </a>
                                     <div class="product-rating">
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star" class="text-warning"></ion-icon>
-                                        <ion-icon name="star-outline" class="text-warning"></ion-icon>
-                                        <ion-icon name="star-outline" class="text-warning"></ion-icon>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star text-warning"></i>
+                                        <i class="fa fa-star-o text-warning"></i>
+                                        <i class="fa fa-star-o text-warning"></i>
                                     </div>
                                     <div class="price">
                                         <div class="actual-price">R$ 57,99</div>
@@ -248,11 +243,11 @@
                                     </a>
                                 </div>
                                 <div class="product-buttons">
-                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
-                                        <ion-icon name="heart-outline"></ion-icon>
-                                    </a>
                                     <a href="javascript:void(0)" class="cart" title="Cart">
-                                        <ion-icon name="cart-outline"></ion-icon>
+                                        <i class="fa fa-shopping-cart"></i>
+                                    </a>
+                                    <a href="javascript:void(0)" class="wishlist" title="Wishlist">
+                                        <i class="fa fa-heart-o"></i>
                                     </a>
                                 </div>
                                 <div class="product-details">
@@ -318,12 +313,10 @@
             </div>
         </footer>
 
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+        <script type="text/javascript" src="../public/accordion/js/accordion.js"></script>
+        <script type="text/javascript" src="../public/js/base.js"></script>
     </body>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-
-    <script type="text/javascript" src="../public/accordion/js/accordion.js"></script>
-    <script type="text/javascript" src="../public/js/base.js"></script>
 </html>
